[package]
name = "copgy"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "CLI utility tool for copying data between Postgres databases"
repository = "https://github.com/knnmran/copgy"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
