[package]
name = "copgy"
version = "0.2.4"
edition = "2021"
license = "MIT"
description = "CLI utility tool for copying data between and executing SQL on PostgreSQL databases"
repository = "https://github.com/knnmran/copgy"
readme = "README.md"
keywords = [ "postgresql", "copy", "sql", "cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
console = "0.15.8"
native-tls = "0.2.11"
postgres = "0.19.7"
postgres-native-tls = "0.5.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
sqlparser = "0.41.0"
url = "2.5.0"
